--- a/demoPage.html
+++ b/demoPage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en"><head>
 <link rel="preload" as="script" href="gh-pages/hexWorker.js" />
-<link rel="preload" as="worker" href="gh-pages/encoderAndDecoderForced.src.js" />
+<link rel="preload" as="script" href="gh-pages/encoderAndDecoderForced.src.js" />
 <title>Fastest Smallest Text Encoder Demo</title>
 </head><body>
   <center><h1>Fastest Smallest Text Encoder Demo</h1></center>
