--- a/demoPage.html
+++ b/demoPage.html
@@ -6,7 +6,7 @@
 </head><body>
   <center><h1>Fastest Smallest Text Encoder Demo</h1></center>
   <div class="flex-sliced-parent" id="horizontal-textareas">
-    <textarea id="rawText" class="flex-half-side"></textarea>
+    <textarea id="rawText" class="flex-half-side">Example text content goes right here</textarea>
     <textarea id="hexaDecimal" class="flex-half-side"></textarea>
   </div>
   <div class="flex-sliced-parent">
@@ -52,6 +52,7 @@
     }
     textarea.flex-half-side {
       white-space: pre-wrap;
+      resize: none!important;
     }
   </style>
   <script> 
