--- a/demoPage.html
+++ b/demoPage.html
@@ -87,7 +87,7 @@
       function whenHexChanges() {
           if (hexaDecimalElement.value !== "") {
               hexWorker.postMessage({
-                  "type": "text",
+                  "type": "hex",
                   "value": ""+hexaDecimalElement.value
               });
           } else {
