--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -6,7 +6,24 @@
 </head><body>
   <center><h1>Fastest Smallest Text Encoder Demo</h1></center>
   <div class="flex-sliced-parent" id="horizontal-textareas">
-    <textarea id="rawText" class="flex-half-side">Example text content goes right here</textarea>
+    <textarea id="rawText" class="flex-half-side">Example text content goes right here
+  ╔══════════════════════════════════════════╗
+  ║                                          ║
+  ║   • ‘single’ and “double” quotes         ║
+  ║                                          ║
+  ║   • Curly apostrophes: “We’ve been here” ║
+  ║                                          ║
+  ║   • Latin-1 apostrophe and accents: '´`  ║
+  ║                                          ║
+  ║   • ‚deutsche‘ „Anführungszeichen“       ║
+  ║                                          ║
+  ║   • †, ‡, ‰, •, 3–4, —, −5/+5, ™, …      ║
+  ║                                          ║
+  ║   • ASCII safety test: 1lI|, 0OD, 8B     ║
+  ║                      ╭─────────╮         ║
+  ║   • the euro symbol: │ 14.95 € │         ║
+  ║                      ╰─────────╯         ║
+  ╚══════════════════════════════════════════╝</textarea>
     <textarea id="hexaDecimal" class="flex-half-side"></textarea>
   </div>
   <div class="flex-sliced-parent">
