--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -24,6 +24,7 @@
   ║   • the euro symbol: │ 14.95 € │         ║
   ║                      ╰─────────╯         ║
   ╚══════════════════════════════════════════╝</textarea>
+<!--Source: https://www.w3.org/2001/06/utf-8-test/UTF-8-demo.html-->
     <textarea id="hexaDecimal" class="flex-half-side"></textarea>
   </div>
   <div class="flex-sliced-parent">
