--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -4,7 +4,7 @@
 <link rel="preload" as="worker" href="hexWorker.js" />
 <title>Fastest Smallest Text Encoder Demo</title>
 </head><body>
-  <center><h1>Fastest Smallest Text Encoder Demo</h1></center>
+  <center><h1>Fastest Smallest Text Encoder Decoder Demo</h1></center>
   <div class="flex-sliced-parent" id="horizontal-textareas">
     <textarea id="rawText" class="flex-half-side">Example text content goes right here
   ╔══════════════════════════════════════════╗
